Enhances alarm functionality and UI
Adds AppImage build support with desktop integration.

Implements system tray integration with minimize-to-tray functionality and alarm ringing status.

Refactors audio service to use mpv for playback with fallback and includes system inhibit to prevent sleep during alarm ring.

Improves alarm scheduling for missed alarms and snooze functionality.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,6 @@
 name: alarmd
-description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
+description: "A simple alarm clock application for Linux desktop."
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
@@ -41,6 +26,7 @@ dependencies:
   media_kit_libs_linux: any
   local_notifier: ^0.1.6
   window_manager: ^0.3.8
+  tray_manager: ^0.5.2
   uuid: ^4.2.2
   path_provider: ^2.1.5
 
